load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "application",
    srcs = ["app.go"],
    importpath = "github.com/monetr/monetr/pkg/application",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "@com_github_getsentry_sentry_go//echo",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
    ],
)
