load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "background",
    srcs = [
        "cleanup_jobs.go",
        "deactivate_links.go",
        "gocraft.go",
        "job_dist.go",
        "jobs.go",
        "process_funding_schedule.go",
        "process_spending.go",
        "pull_transactions.go",
        "remove_link.go",
        "remove_transactions.go",
        "sync_plaid.go",
        "synchronous.go",
    ],
    importpath = "github.com/monetr/monetr/pkg/background",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/crumbs",
        "//pkg/internal/myownsanity",
        "//pkg/internal/testutils",
        "//pkg/models",
        "//pkg/platypus",
        "//pkg/pubsub",
        "//pkg/repository",
        "//pkg/secrets",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_go_pg_pg_v10//:pg",
        "@com_github_gocraft_work//:work",
        "@com_github_gomodule_redigo//redis",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_stretchr_testify//require",
        "@com_github_vmihailenco_msgpack_v5//:msgpack",
    ],
)

go_test(
    name = "background_test",
    srcs = [
        "cleanup_jobs_test.go",
        "gocraft_test.go",
        "jobs_test.go",
        "main_test.go",
        "process_funding_schedule_test.go",
        "process_spending_test.go",
        "pull_transactions_test.go",
        "sync_plaid_test.go",
    ],
    embed = [":background"],
    env_inherit = [
      "POSTGRES_HOST",
      "POSTGRES_DB",
      "POSTGRES_USER",
      "POSTGRES_PASSWORD",
      "POSTGRES_PORT",
    ],
    deps = [
        "//pkg/config",
        "//pkg/internal/fixtures",
        "//pkg/internal/mock_plaid",
        "//pkg/internal/mockgen",
        "//pkg/internal/myownsanity",
        "//pkg/internal/testutils",
        "//pkg/models",
        "//pkg/platypus",
        "//pkg/pubsub",
        "//pkg/secrets",
        "@com_github_brianvoe_gofakeit_v6//:gofakeit",
        "@com_github_gocraft_work//:work",
        "@com_github_golang_mock//gomock",
        "@com_github_jarcoal_httpmock//:httpmock",
        "@com_github_plaid_plaid_go_v14//plaid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
