load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "client.go",
        "http.go",
    ],
    importpath = "github.com/monetr/monetr/pkg/client",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/models",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
