load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "admin.go",
        "beta.go",
        "cleanup_jobs.go",
        "config.go",
        "controllers.go",
        "data.go",
        "database.go",
        "jobs.go",
        "kms.go",
        "main.go",
        "migrate.go",
        "notices.go",
        "root.go",
        "serve.go",
        "version.go",
    ],
    importpath = "github.com/monetr/monetr/pkg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/application",
        "//pkg/background",
        "//pkg/billing",
        "//pkg/build",
        "//pkg/cache",
        "//pkg/certhelper",
        "//pkg/client",
        "//pkg/config",
        "//pkg/controller",
        "//pkg/hash",
        "//pkg/icons",
        "//pkg/internal/myownsanity",
        "//pkg/logging",
        "//pkg/mail",
        "//pkg/metrics",
        "//pkg/migrations",
        "//pkg/models",
        "//pkg/platypus",
        "//pkg/pubsub",
        "//pkg/repository",
        "//pkg/secrets",
        "//pkg/stripe_helper",
        "//pkg/ui",
        "//pkg/util",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_go_pg_pg_v10//:pg",
        "@com_github_gomodule_redigo//redis",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
