load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "consts",
    srcs = [
        "bcrypt.go",
        "plaid.go",
    ],
    importpath = "github.com/monetr/monetr/pkg/consts",
    visibility = ["//visibility:public"],
    deps = ["@com_github_plaid_plaid_go_v14//plaid"],
)
