load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controller",
    srcs = [
        "account.go",
        "api_path.go",
        "authentication.go",
        "bank_accounts.go",
        "billing.go",
        "config.go",
        "controller.go",
        "error.go",
        "errors.go",
        "forecast.go",
        "funding_schedules.go",
        "helpers.go",
        "icons.go",
        "institutions.go",
        "links.go",
        "middleware.go",
        "plaid.go",
        "plaid_webhook.go",
        "spending.go",
        "stripe.go",
        "transactions.go",
        "user.go",
    ],
    importpath = "github.com/monetr/monetr/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/background",
        "//pkg/billing",
        "//pkg/build",
        "//pkg/cache",
        "//pkg/captcha",
        "//pkg/communication",
        "//pkg/config",
        "//pkg/consts",
        "//pkg/crumbs",
        "//pkg/forecast",
        "//pkg/icons",
        "//pkg/internal/ctxkeys",
        "//pkg/internal/myownsanity",
        "//pkg/mail",
        "//pkg/metrics",
        "//pkg/models",
        "//pkg/platypus",
        "//pkg/pubsub",
        "//pkg/repository",
        "//pkg/secrets",
        "//pkg/stripe_helper",
        "//pkg/util",
        "//pkg/verification",
        "@com_github_form3tech_oss_jwt_go//:jwt-go",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_getsentry_sentry_go//echo",
        "@com_github_go_pg_pg_v10//:pg",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_gomodule_redigo//redis",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_stripe_stripe_go_v72//:stripe-go",
        "@com_github_stripe_stripe_go_v72//webhook",
    ],
)

go_test(
    name = "controller_test",
    srcs = [
        "account_test.go",
        "authentication_test.go",
        "billing_test.go",
        "config_test.go",
        "controller_test.go",
        "funding_schedules_test.go",
        "links_test.go",
        "main_test.go",
        "plaid_test.go",
        "plaid_webhook_test.go",
        "transactions_test.go",
        "user_test.go",
    ],
    env_inherit = [
      "POSTGRES_HOST",
      "POSTGRES_DB",
      "POSTGRES_USER",
      "POSTGRES_PASSWORD",
      "POSTGRES_PORT",
    ],
    deps = [
        ":controller",
        "//pkg/application",
        "//pkg/background",
        "//pkg/billing",
        "//pkg/cache",
        "//pkg/config",
        "//pkg/internal/fixtures",
        "//pkg/internal/mock_http_helper",
        "//pkg/internal/mock_mail",
        "//pkg/internal/mock_plaid",
        "//pkg/internal/mock_secrets",
        "//pkg/internal/mock_stripe",
        "//pkg/internal/mockgen",
        "//pkg/internal/myownsanity",
        "//pkg/internal/testutils",
        "//pkg/models",
        "//pkg/platypus",
        "//pkg/repository",
        "//pkg/secrets",
        "//pkg/stripe_helper",
        "//pkg/util",
        "//pkg/verification",
        "@com_github_alicebob_miniredis_v2//:miniredis",
        "@com_github_brianvoe_gofakeit_v6//:gofakeit",
        "@com_github_form3tech_oss_jwt_go//:jwt-go",
        "@com_github_gavv_httpexpect_v2//:httpexpect",
        "@com_github_golang_mock//gomock",
        "@com_github_gomodule_redigo//redis",
        "@com_github_jarcoal_httpmock//:httpmock",
        "@com_github_plaid_plaid_go_v14//plaid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
