load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hash",
    srcs = ["hash.go"],
    importpath = "github.com/monetr/monetr/pkg/hash",
    visibility = ["//visibility:public"],
    deps = ["@com_github_oneofone_xxhash//:xxhash"],
)

go_test(
    name = "hash_test",
    srcs = ["hash_test.go"],
    embed = [":hash"],
    deps = [
        "@com_github_brianvoe_gofakeit_v6//:gofakeit",
        "@com_github_stretchr_testify//assert",
    ],
)
