load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repository",
    srcs = [
        "accounts.go",
        "balances.go",
        "bank_account.go",
        "email.go",
        "expenses.go",
        "funding_schedules.go",
        "job.go",
        "link.go",
        "plaid_link.go",
        "repository.go",
        "repository_default.go",
        "security.go",
        "settings.go",
        "sync.go",
        "transaction.go",
        "unauthenticated.go",
        "user.go",
    ],
    importpath = "github.com/monetr/monetr/pkg/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/consts",
        "//pkg/crumbs",
        "//pkg/hash",
        "//pkg/models",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_go_pg_pg_v10//:pg",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_crypto//bcrypt",
    ],
)

go_test(
    name = "repository_test",
    srcs = [
        "accounts_test.go",
        "email_test.go",
        "funding_schedules_test.go",
        "job_test.go",
        "main_test.go",
        "plaid_link_test.go",
        "security_test.go",
        "settings_test.go",
        "sync_test.go",
        "transaction_test.go",
        "unauthenticated_test.go",
    ],
    embed = [":repository"],
    deps = [
        "//pkg/consts",
        "//pkg/hash",
        "//pkg/internal/fixtures",
        "//pkg/internal/testutils",
        "//pkg/models",
        "@com_github_brianvoe_gofakeit_v6//:gofakeit",
        "@com_github_pkg_errors//:errors",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_crypto//bcrypt",
    ],
)
